--- a/index.html
+++ b/index.html
@@ -122,11 +122,28 @@
 
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
-          <img src="assets/img/gerardos.jpg" class="img-fluid" alt="" width=100%>
-           <!--iframe style="border:0; width: 100%; height: 400px;" src="https://ucl-15mincity-ecotopiaurbana.wunderbucket.dev/" frameborder="0" allowfullscreen></iframe-->
+          <iframe style="border:0; width: 100%; height: 400px;" src="wfh_visualisation/wfh.html" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
    
+    </section><!-- End Tools Section -->
+
+    <!-- ======= Tools Section ======= -->
+    <section id="tools" class="tools">
+      <div class="section-title">
+        <span>TOOLS</span>
+        <h2>TOOLS</h2>
+        <p>Our Teams</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12" data-aos="fade-up">
+          <!--img src="assets/img/gerardos.jpg" class="img-fluid" alt="" width=100%-->
+           <iframe style="border:0; width: 100%; height: 400px;" src="https://ucl-15mincity-ecotopiaurbana.wunderbucket.dev/" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+  
     </section><!-- End Tools Section -->
 
     <!-- ======= Teams Section ======= -->
