--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
       <h1>THIS SHOULD BE TITLE</h1>
       <h2>It's title but should be title</h2>
-      <a href="#intro" class="btn-get-started scrollto">Get Started</a>
+      <a href="wfh_visualisation/wfh.html" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
