update landing page

--- a/index.html
+++ b/index.html
@@ -98,6 +98,50 @@
       </div>
     </section><!-- End Intro Section -->
 
+    <!-- ======= Job Density ======= -->
+    <section id="intro" class="job">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="section-title">
+              <span>Job Density In UK</span>
+              <h2>Job Density In UK</h2>
+            </div>
+            <p class="fst-normal">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
+              <br><br>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>        
+        </div>
+        
+        <div class="row">
+          <div class="col-lg-6 flourish-embed flourish-chart" data-src="visualisation/13774264">
+            <script src="https://public.flourish.studio/resources/embed.js"></script>
+          </div>
+          <div class="col-lg-6 flourish-embed flourish-bar-chart-race" data-src="visualisation/13774421">
+            <script src="https://public.flourish.studio/resources/embed.js"></script>
+          </div>
+        </div>
+        
+      </div>
+
+
+      <div class="row">
+        <div class="col-lg-8 order-1 order-lg-2 maps">
+          <iframe style="border:0; width: 100%; height: 1000px;" src="LJH_Visualization/Employment.html" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-4 pt-4 pt-lg-0 order-2 order-lg-2 content" data-aos="fade-right">
+          <h3>Employee Well-being and Facilities Services</h3>
+          <p class="fst-normal">
+            Well-being has become everyone's main concern in recent years, especially when it comes to work environments. Offices with happier employees showed higher productivity and better financial performance (Seligman and Adler, 2019). On the other hand, well-being shows negative relation with hour work which mean the longer working hour the lower employee’s well-being (Diener, Kahneman and Helliwell, 2010). Thus, to boost employee productivity, companies tried some strategies to maintain employee’s well-being. One of them is by providing facilities management services in the office which cover employee’s daily needs such as health, food, and stationary supplies (Anker Jensen et al., 2012; Arampatzi and Burger, 2020). Not only soft services but hard services that include physical infrastructure also being provided(Anker Jensen et al., 2012). Thus, the increase of labour and the development of built environment happen together to fulfil worker needs. Hence, urban development happen significantly around workplaces. 
+            <p>
+            However, since pandemic covid-19, people are have been forced to work from home. Meanwhile they still need to access service facilities to support their daily productivity. Therefore, this website not only tell story of urban development through workplace perspective but also assess wherever we work now, does this area has all the service facilities needed.  
+          </p>
+        </div>
+      </div>
+
+    </section><!-- End Job Density Section -->
    
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
@@ -138,8 +182,8 @@
 
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
-          <!--img src="assets/img/gerardos.jpg" class="img-fluid" alt="" width=100%-->
-           <iframe style="border:0; width: 100%; height: 400px;" src="https://ucl-15mincity-ecotopiaurbana.wunderbucket.dev/" frameborder="0" allowfullscreen></iframe>
+          <img src="assets/img/gerardos.jpg" class="img-fluid" alt="" width=100%>
+          <!--iframe style="border:0; width: 100%; height: 400px;" src="https://gerardoezequiel.github.io/15mincity/" frameborder="0" allowfullscreen></iframe-->
         </div>
       </div>
 
