landing page and wfh

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Day Bootstrap Template - Index</title>
+  <title>Chrono-Urban Workspaces</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -217,7 +217,7 @@
 
         <div class="row">
           <div class="col-lg-9">
-            <iframe id="map3" style="border:0; width: 100%; height: 600px;" src="wfh_visualisation/wfh.html" frameborder="0" allowfullscreen></iframe>
+            <iframe id="map3" style="border:0; width: 100%; height: 750px;" src="wfh_visualisation/wfh.html" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="col-lg-3 content">
             <p>
