--- a/wfh_visualisation/wfh.html
+++ b/wfh_visualisation/wfh.html
@@ -50,7 +50,7 @@
             }
 
             .map-overlay{
-                width: 300px;
+                width: 400px;
                 padding: 5px 5px 5px 10px;
                 font-family: 'Nunito';
                 font-size: 13px;
@@ -123,9 +123,9 @@
             <h1>Work Form Home Percentage Change</h1>
             <h2>2011 to 2021</h2>
             <h2>London, UK</h2>
-            <p>Sin</p>
+            <p>Since pandemic COVID-19, sudden shift happens and force employee to work from home. This maps shows percentage of working from home people per working age (16-65 years old) population in every borough and ward level in London in 2011 and 2021. Layer of WFH difference show which are has underwent significant shift. You can change the aggregation level from wards to borough or vice versa by scrolling on the maps.</p>
             <br>
-            <P> </P>
+            <p class="credit">WFH data: <a href="https://data.london.gov.uk/dataset/2021-census-wards-labour-market">2021 Census labour market </a>.© Office for National Statistics.</p>
             <div>
                 <h3>Select To see Different Year!</h3>
                 <div class="radio-btn">
@@ -152,11 +152,11 @@
                 </div>
             </div>
             <div class='map-legend'>
-                <canvas id='map-legend' width='300' height='30' style="background-image: linear-gradient(to right, #feedde, #e6550d); border-color: #a63603; border-width: 3px;"> </canvas>
+                <canvas id='map-legend' width='400' height='30' style="background-image: linear-gradient(to right, #feedde, #e6550d); border-color: #a63603; border-width: 3px;"> </canvas>
                 <table>
                     <tr>
                         <td>
-                            <p>Min  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Max</p>
+                            <p>Min  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Max</p>
                         </td>
                     </tr>
                 </table>
