last push before presentation

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             </div>
             <h3>Workplaces and Facilities Services</h3>
             <p class="fst-normal">
-              It is proven that offices with happier employees have higher productivity and better financial performance (Seligman and Adler, 2019). Thus, in the last few years, companies has been implementing some strategies to boost productivity by maintain their employee’s well-being. One of them is by providing facilities management services in the office which cover employee’s daily needs such as physical infrastructure of health, food, and stationary supplies (Anker Jensen et al., 2012; Arampatzi and Burger, 2020). Thus in some area of a city with high number of labour , development of built environment happen simultaneously to fulfil worker needs. Hence, urban development happens significantly around workplaces area.  
+              It is proven that offices with happier employees have higher productivity and better financial performance (Seligman and Adler, 2019). Thus, in the last few years, companies has been implementing some strategies to boost productivity by maintain their employee’s well-being. One of them is by providing facilities management services in the office which cover employee’s <b>daily needs</b> such as physical infrastructure of health, food, and stationary supplies (Anker Jensen et al., 2012; Arampatzi and Burger, 2020). Thus in some area of a city with high number of labour , development of built environment happen simultaneously to fulfil worker needs. Hence, <b>urban development</b> happens significantly <b>around workplaces area</b>.  
               <p>
 
-              However, since pandemic covid-19, people are have been forced to work from home. Meanwhile they still need to access service facilities to support their daily productivity. Therefore, this website not only tell story of urban development through workplace perspective but also assess wherever we work now, does this area has all the service facilities needed.  
+              However, since pandemic covid-19, people are have been <b>forced to work from home</b>. Meanwhile they still need to access service facilities to support their daily productivity. Therefore, this website not only tell story of <b>urban development through workplace perspective</b> but also assess wherever we work now, does this area has all the service facilities needed within <b>15 minutes</b>.  
 
             </p>
           </div>
@@ -265,7 +265,11 @@
         <div class="section-title">
           <span>15-minutes city TOOLS</span>
           <h2>15-minutes city TOOLS</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>
+            The transition to remote working during the COVID-19 pandemic prompted an innovative reconfiguration of urban planning known as chrono-urbanism and the 15-Minute City concept. This model envisions a cityscape where every essential service—workplaces, educational institutions, healthcare facilities, and recreational spots—are within a 15-minute walking or cycling distance from residences. This shift highlights the importance of evenly distributing job opportunities and services across cities like London
+            <br><br>
+            Chrono-urbanism represents a revolutionary paradigm shift in urban planning. It is an approach that aims to disrupt and reshape the traditionally accepted model of urban organization, where residential, commercial, and leisure areas are distinct and often distant from each other. The concept reimagines cities with an emphasis on proximity, decentralization, and multi-functionality, presenting an appealing and more sustainable model living – the 15-Minute City.
+          </p>
         </div>
       </div>
       
