job density update

--- a/numberofjobsarea/numberofjobsarea.html
+++ b/numberofjobsarea/numberofjobsarea.html
@@ -97,8 +97,8 @@
 
 <body>
   <div id="line-graph-container">
-    <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/13764676"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-
+    <div class="flourish-embed flourish-slope" data-src="visualisation/13879101"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+   
     </div>
     <button id="show-map-button" class="map-button">Show</button>
   </div>
