--- a/numberofjobsareanew/numberofjobsarea.html
+++ b/numberofjobsareanew/numberofjobsarea.html
@@ -73,7 +73,7 @@
   color: white;
   border: none;
   margin-right: 5px;
-  padding: 10px;
+  padding: 4px;
   cursor: pointer;
   z-index: 1;
 }
@@ -97,10 +97,10 @@
 
 <body>
   <div id="line-graph-container">
-    <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/13764676"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-
+    <div class="flourish-embed flourish-slope" data-src="visualisation/13879101"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+   
     </div>
-    <button id="show-map-button" class="map-button">Show Map</button>
+    <button id="show-map-button" class="map-button">Show</button>
   </div>
 
   <div id="map-container" class="hidden">
