--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <ul>
           <li><a class="nav-link scrollto" href="#intro">Intro</a></li>
           <li><a class="nav-link scrollto" href="#job">Job Density</a></li>
-          <li><a class="nav-link scrollto" href="#fullpart">Part-time Full-time</a></li>
-          <li><a class="nav-link scrollto" href="#wfh">Work from home</a></li>
-          <li><a class="nav-link scrollto" href="#tools">Tools</a></li>
+          <li><a class="nav-link scrollto" href="#fullpart">Workplaces Distribution</a></li>
+          <li><a class="nav-link scrollto" href="#wfh">Work From Home</a></li>
+          <li><a class="nav-link scrollto" href="#tools">15-Minutes City</a></li>
           <li><a class="nav-link scrollto" href="#teams">Team</a></li>
           <li><a class="nav-link scrollto" href="#recap">Gallery</a></li>
         </ul>
@@ -195,7 +195,7 @@
         <div class="text-center">
           <h3>After Pandemic COVID-19</h3>
           <p>Previously, workplaces are clustered in the inner London. However, in 2020 pandemic COVID-19 hitted and started sudden change in the world including London. Let's see it's impact on the workplaces landscape in London</p>
-          <a class="cta-btn" href="#">Get explore</a>
+          <a class="cta-btn" href="#wfh">Get explore</a>
         </div>
 
       </div-->
